--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "jwt-decode": "^2.2.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.2",
+    "nodemon": "^2.0.2",
     "redis": "^2.8.0",
     "uuid": "^3.3.3"
   },
