--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "twilio": "^3.39.2"
   },
   "name": "vegetabeli-api",
   "description": "",
